--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
     "firebase": "^6.3.0",
+    "firebase-admin": "^8.2.0",
+    "http2": "^3.3.7",
     "material-table": "^1.40.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
